# papertrail-ai-backend

./: Dockerfile  README.md  main.py  pyproject.toml  routes.py
config/: settings.py
controller/: controller_dependencies.py  paper_controller.py  validation_controller.py
core/: anthropic_client.py  embeddings_retriever.py  llm_verifier.py  pdf_text.py  streaming.py  verification_pipeline.py
model/: api.py  claim.py
repository/: job_repository.py  namespaces.py
service/: api_key_validation_service.py  paper_service.py
util/: constants.py  deps.py  enums.py
